refactoring structure folders

--- a/css/common.css
+++ b/css/common.css
@@ -39,7 +39,7 @@
     font-weight: 700;
     font-size: 18px;
     line-height: 20px;
-    /*text-transform: uppercase;*/
+    text-transform: uppercase;
     margin-bottom: 5px;
 }
 
