--- a/css/style.css
+++ b/css/style.css
@@ -2,22 +2,7 @@
 @import "common.css";
 @import "header.css";
 @import "footer.css";
-
-@font-face {
-  font-family: "Barlow-Regular";
-  src: url("/fonts/Barlow-Regular.ttf") format("truetype");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Barlow-Bold";
-  src: url("/fonts/Barlow-Bold.ttf") format("truetype");
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
+@import "../fonts/fonts.css";
 
 /* Home  //======================================================================================================================================================== */
 
@@ -202,7 +187,7 @@
 
 .about__item_title:before {
   content: '';
-  background: url("/images/icons/check.svg") center no-repeat;
+  background: url("../images/icons/check.svg") center no-repeat;
   position: absolute;
   top: 0;
   left: 0;
