--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Barlow-Regular";
-    src: url("/fonts/Barlow-Regular.ttf") format("truetype");
+    src: url("Barlow-Regular.ttf") format("truetype");
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: "Barlow-Bold";
-    src: url("/fonts/Barlow-Bold.ttf") format("truetype");
+    src: url("Barlow-Bold.ttf") format("truetype");
     font-weight: 700;
     font-style: normal;
     font-display: swap;
