--- a/css/common.css
+++ b/css/common.css
@@ -49,6 +49,23 @@
     font-size: 64px;
     line-height: 75px;
     text-transform: uppercase;
+    position: relative;
+    left: -100%;
+    opacity: 0;
+    transition: left, opacity 0.5s ease;
+    animation: visible ease 2s forwards;
+}
+
+@keyframes visible {
+    0% {
+        left: -100%;
+        opacity: 0;
+    }
+    100% {
+        left: 0;
+        opacity: 1;
+    }
+
 }
 
 @media (max-width: 778px) {
@@ -76,6 +93,23 @@
 .text {
     font-size: 24px;
     line-height: 30px;
+    position: relative;
+    left: -100%;
+    opacity: 0;
+    transition: left, opacity 0.5s ease;
+    animation: visible ease 3s forwards;
+}
+
+@keyframes visible {
+    0% {
+        left: -100%;
+        opacity: 0;
+    }
+    100% {
+        left: 0;
+        opacity: 1;
+    }
+
 }
 
 @media (max-width: 778px) {
@@ -83,4 +117,48 @@
         font-size: 18px;
         line-height: 24px;
     }
+}
+
+
+.round {
+    position: relative;
+}
+
+.round label {
+    background-color: #1F2327;
+    border: 1px solid #353d3f;
+    border-radius: 50%;
+    cursor: pointer;
+    height: 28px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 28px;
+}
+
+.round label:after {
+    border: 2px solid #fff;
+    border-top: none;
+    border-right: none;
+    content: "";
+    height: 6px;
+    left: 7px;
+    opacity: 0;
+    position: absolute;
+    top: 8px;
+    transform: rotate(-45deg);
+    width: 12px;
+}
+
+.round input[type="checkbox"] {
+    visibility: hidden;
+}
+
+.round input[type="checkbox"]:checked + label {
+    background-color: #1F2327;
+    border-color: #353d3f;
+}
+
+.round input[type="checkbox"]:checked + label:after {
+    opacity: 1;
 }
