--- a/css/header.css
+++ b/css/header.css
@@ -30,6 +30,34 @@
     flex-wrap: wrap;
 }
 
+.menu__item {
+    position: relative;
+    transition: transform 0.2s ease;
+}
+
+@media (hover: hover) and (pointer: fine) {
+    .menu__item:hover {
+        transform: scale(1.1);
+
+    }
+
+    .menu__item::after {
+        content: "";
+        display: block;
+        position: absolute;
+        bottom: -2px;
+        left: 0;
+        width: 0;
+        height: 1px;
+        background-color: #FFF;
+        transition: width 0.5s ease 0s;
+    }
+
+    .menu__item:hover::after {
+        width: 100%;
+    }
+}
+
 @media (max-width: 778px) {
     .header__body {
         padding: 15px 0;
